vtw experimentation phase

--- a/04_vtw/vtw.tex
+++ b/04_vtw/vtw.tex
@@ -107,7 +107,7 @@ In addition to these temporary workshops, the reconstructions have also been use
 
 %=========================================================================================================
 
-\section{Parallel Reality in Virtual Heritage}
+\subsection{Parallel Reality in Virtual Heritage}
 Applications of alternate reality techniques within virtual heritage have thus far broadly fallen into the categories of AR, experienced at the site, or VR, experienced away from the site (in terms of space, time, or both). The dissemination of the OVW group's content has been no exception to this observation, falling into categories 10-12 of figure \ref{taxonomy_2.png}, with complete virtual environments that are experienced with both spatial \& temporal separation from the real site that they represent.
 
 Applying the concept of parallel reality to virtual heritage represents an opportunity to explore an exciting new modality of interaction that combines the complete virtual environments of categories 10-12 with the real time juxtaposition between real \& virtual environments of AR systems from category 13. In terms of the four categories of the taxonomic space, such a PR system would combine the high precision \& interactivity of a VR system (category 10) with two values of viruality, as the user is provided the ability to observe either the complete virtual environment (virtuality = 1) or the unmodified real environment (virtuality = 0). The automatism of such a system would occupy a position between that of VR \& AR; whilst the system will require a more involved development cycle than a purely VR one, the slackened requirements on registrational accuracy of a PR system compared to an AR system promise higher automatism than a purely AR system.
@@ -836,9 +836,9 @@ When analyzing the tracks in the vicinity of the nave (see figure \ref{vtw_all_r
 \label{vtw_all_routes_second_half.png}
 \end{figure}
 
-VTW's camera control from orientation data does not have as stringent performance criteria as the movement control from position data. Unlike augmented reality where sparse virtual content is superimposed upon a view of a real environment and the virtual objects must be placed accurately in order for the effect to work well, cross reality presents a complete virtual environment that is viewed `separately' or side-by-side with the real environment and thus discrepancies between orientation of real and virtual environments have a less detrimental effect to the experience. Although the accuracy of the camera control during the experiments was reported as being sufficient, the speed at which the camera orientation moved to match physical orientation was reported as being too slow, resulting in having to wait for the display to `catch up' to changes in orientation. This is attributed to the 10Hz sampling rate of the orientation sensors which, particularly after readings are combined for smoothing purposes to reduce jerky movement, resulted in too infrequent orientation updates. Frame rates within VTW whilst navigating the route averaged between 15 and 20 frames per second with the viewer's `quality and speed' slider set to the `low' position.
+VTW's camera control from orientation data does not have as stringent performance criteria as the movement control from position data. Unlike AR applications where sparse virtual content is superimposed upon a view of a real environment and the virtual objects must be placed accurately in order for the effect to work well, PR presents a complete virtual environment that is viewed `separately' or side-by-side with the real environment and thus discrepancies between orientation of real and virtual environments have a less detrimental effect to the experience. Although the accuracy of the camera control during the experiments was reported as being sufficient, the speed at which the camera orientation moved to match physical orientation was reported as being too slow, resulting in having to wait for the display to `catch up' to changes in orientation. This is attributed to the 10Hz sampling rate of the orientation sensors which, particularly after readings are combined for smoothing purposes to reduce jerky movement, resulted in too infrequent orientation updates. Frame rates within VTW whilst navigating the route averaged between 15 and 20 frames per second with the Second Life client's `quality and speed' slider set to the `low' position.
 
-The style of explorative interaction with virtual content that this system employs is more resilient to input lag and low frame rates than other scenarios of interaction with virtual content such as fast paced competitive video games including First Person Shooters (FPS) [20], but overall user experience would nonetheless be improved by a faster sampling of orientation data and a higher frame rate. Additionally it should be noted that the cathedral reconstruction was created with relatively powerful desktop computers in mind as the primary deployment platform and has not been optimized for use on less powerful mobile platforms such as VTW. Performance of VTW on a less graphically complex OpenSim region (Salt Pan 2), that also depicts a reconstruction of a cultural heritage site, was better at 20 to 25 frames per second at the `low' position and between 15 and 20 frames per second at `high'.
+The style of explorative interaction with virtual content that this system employs is more resilient to input lag and low frame rates than other scenarios of interaction with virtual content such as fast paced competitive video games including First Person Shooters (FPS) [20], but overall user experience would nonetheless be improved by a faster sampling of orientation data and a higher frame rate. Additionally it should be noted that the cathedral reconstruction was created with relatively powerful desktop computers in mind as the primary deployment platform and has not been optimized for use on less powerful mobile platforms such as VTW. Performance of VTW on a less graphically complex OpenSim region that also depicts a reconstruction of a cultural heritage site, was better at 20 to 25 frames per second at the `low' position and between 15 and 20 frames per second at `high'.
 
 %\begin{figure}[h]
 %\centering
@@ -853,21 +853,14 @@ The style of explorative interaction with virtual content that this system emplo
 
 \textbf{***Talk about static modality being too similar to existing XR projects (\& mobile modality needs better positional tracking). Also mention how tablet isn't immersive enough \& HMD (with better trackig) is the next plausible step (eg next chapter!)?}
 
-The positional accuracy of $1.02e^{-04\circ}$ attained by the MAX-6 is sufficient for the first modality of interaction (that of distinguishing and navigating between multiple points of interest). This value of $1.02e^{-04\circ}$ (analogous to a combination of $\pm11.3$m of North/South inaccuracy or $\pm6.3$m of East/West inaccuracy) represents a constraint on the granularity of the content; it is the minimum distance required between any two points of interest for them to be correctly differentiated between. This same value is not sufficient for the second modality of interaction (that of free roaming exploration with avatars mimicking their users' movements as closely as possible). This modality would require the use of additional position tracking techniques to improve accuracy to around 1m CEP (analogous to $8.98e^{-06\circ}$ latitude or $1.62e^{-05\circ}$ longitude around the location of the St Andrews cathedral).
+The positional accuracy of $1.02e^{-04\circ}$ attained by the MAX-6 is not sufficient for the style of interaction that VTW envisaged. This value, analogous to a combination of $\pm11.3$m of North/South inaccuracy or $\pm6.3$m of East/West inaccuracy, represents a constraint on the granularity of the content; it is the minimum distance required between any two points of interest for them to be correctly differentiated between. This value is too large to differentiate between, for example, two sides of a wall \& is likely to situate a user's virtual presence on the opposite side of a wall to their real presence, especially when that wall still exists in the real world to interfere with GPS reception, ruining the effect of being able to switch between real \& virtual stimuli. After experiencing VTW with, at times, theoretically as low as 2m CEP, an accuracy of around 1m CEP (analogous to $8.98e^{-06\circ}$ latitude or $1.62e^{-05\circ}$ longitude around the location of the St Andrews cathedral) is envisaged as the minimum for successful implementation of the VTW concept.
 
-Use of a GPS receiver that is lower performance than the MAX-6 used by VTW, but more common due to being of the calibre integrated into smartphones and tablets such as that used in the experiments, is still sufficient for the first modality but with a larger minimum distance required between any two points of interest. The Hausdorff distance of $1.33e^{-04\circ}$ recorded by the smartphone used in the experiments is analogous to $\pm14.8$m N/S or $\pm8.2$m E/W around the location of the cathedral.
-
-Observed accuracy of the orientation tracking is sufficient for both modalities of interaction; the accuracy of orientation tracking required does not change with different positional accuracy and the accuracy of orientation attained in the experiments is sufficient for an acceptable user experience, however the experience would benefit from better graphical quality and higher responsiveness to changes in user orientation.
+The accuracy of orientation tracking does not change with different positional accuracy and the accuracy attained in the experiments was sufficient for an acceptable user experience, however the experience would benefit greatly from better graphical quality and higher responsiveness to changes in user orientation. The immersiveness of a hand held tablet is also rather poor, which does not fit well with one of the major proposed benefits of the PR concept - the ability to produce immersive, atmospheric virtual visuals (especially when compared to paradigms such as AR which have established hand held implementations).
 
 %=========================================================================================================
 
-\section{Using the Virtual Time Window}
+\section{Conclusions}
 
-Two plausible modalities of interaction were identified for this system, with each presenting different requirements with regards to accuracy of position tracking.
-
-The first modality is one in which a number of locations that represent points of particular interest are identified. This is already a common practice at cultural heritage sites, with such locations often bearing signs or placards presenting text and/or images explaining what can be observed from the position. With VTW, when a user walks within a certain range of such a point, their avatar can be moved to the corresponding location within the reconstruction (and a sound played to alert the user to the fact that there is something of interest to observe) from which they can then move the tablet around them to examine their surroundings in the reconstruction. This modality is similar to audio tours employed by many museums and cultural heritage sites, but replaces the requirement to follow a static route or type in numbers of locations with the ability to freely navigate the real environment with access to additional information being triggered automatically once within the required range of a point of interest.
-
-The second modality is one of free roaming exploration, in which the movements of the user's avatar within the reconstruction mimic the user's movements within the real world as closely as possible.
-The first modality can be scaled to function with different accuracies of position tracking; as long as the distance between any two points of interest is at least as much as the worst case performance of the position tracking then distinguishing correctly between different points will always succeed. The second modality requires extremely accurate position tracking, arguably surpassing the capabilities of mainstream GPS technology even in ideal situations.
+This chapter has introduced virtual heritage as a field in which the successful application of alternate reality techniques has a proven history \& to which the application of PR promises to be of further benefit. The Virtual Time Window project was introduced as an initial foray into the realm of applying PR to virtual heritage, making use of an x86 tablet computer imbued with position \& orientation sensing via GPS \& combined accelerometer/magnetometer, for PR exploration of outdoor cultural heritage sites \& their virtual reconstructions hosted upon an OpenSim framework. An implementation of this platform is presented, however real world experimentation revealed that the accuracy of positional tracking obtainable, even by discrete GPS receivers that outperform those mainstream receivers found in smartphones, is not sufficient for the envisaged style of interaction. Furthermore, the ability of a complete virtual environment presented on a small hand held display to provide a greater sense of immersion in a complete, atmospheric virtual environment was found to be lacking \& thus the pursuit of this modality of PR interaction was not continued.
 
 %=========================================================================================================
