restructuring MShades chapters

--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -1,5 +1,162 @@
 %=========================================================================================================
+
+\section{Investigation 1 - The Case for Mobile XR}
+\label{investigation1}
+This first investigation will compare interaction with the RW \& VR chapel using Mirrorshades to interaction with the same content separately, the latter being the approach usually adopted for dissemination of VR content in cultural heritage contexts. Participants will complete a task that will promote active comparison \& contrast of the RW \& VR environments, whilst navigating a set route. This investigation will gauge through experimentation whether the Mirrorshades platform provides any value over the traditional manner in which the same VR content might be disseminated at a cultural heritage site.
+
+%spatial \& temporal separation
+
+\subsection{Setting \& Task}
+This investigation comprises two phases;
+
+\begin{enumerate}
+	\item Participants will experience the RW \& VR chapels separately. They will navigate the VR chapel from a stationary position, as one might expect to see a VR installation at a cultural heritage site, using the Xbox controller to move around the VR environment observed via the HMD. The HMD will obscure their view of the RW chapel around them. Subsequently, they will navigate the RW chapel without the HMD or any associated equipment.
+	\item Participants will experience the RW \& VR chapels in tandem using the Mirrorshades platform. They will wear the HMD, holding the Xbox controller in their right hand \& the smartphone in their left, with the laptop \& battery pack in a satchel worn over one shoulder. One style of transition will be available to the participants during this phase.
+\end{enumerate}
+
+In all 3 scenarios (phase 1 VR, phase 1 RW, phase 2 RW + VR) the participant will navigate the same route \& will be instructed to identify a particular feature/object within the chapel (see figures \ref{pews} \& \ref{ceiling}), situated somewhere upon the set route, that differs in its appearance \&/or location between the RW \& VR chapels. The order in which the two phases are completed will be randomised between participants, as will the features that they are told to observe in each phase. Participants will have a maximum length of time to navigate the route \& will be allowed to stop before this time has elapsed should they wish.
+
+%\begin{figure}[h]
+%	\begin{center}
+%		\includegraphics[width=0.7\textwidth]{pews.png}
+%		\caption{Chapel pews, greater in number in present day.}
+%		\label{pews}
+%	\end{center}	
+%\end{figure}
+
+%\begin{figure}[h]
+%	\begin{center}
+%		\includegraphics[width=0.7\textwidth]{ceiling.png}
+%		\caption{Chapel ceiling, different construction in present day.}
+%		\label{ceiling}
+%	\end{center}	
+%\end{figure}
+
+%\begin{figure}[h]
+%	\begin{center}
+%		\includegraphics[width=0.7\textwidth]{division.png}
+%		\caption{Division of the internal space of the chapel, different position in present day.}
+%		\label{division}
+%	\end{center}	
+%\end{figure}
+
+%rows/number of pews
+%position of dividing wall
+%colour/construction of ceiling
+%number/position of lecterns
+
+\subsection{Evaluation Techniques}
+Evaluation will be performed via a short structured interview \& completion of the System Usability Scale (SUS)~\cite{Brooke1996}.
+
+%\begin{itemize}
+%	\item (General) Which did you prefer?
+%	\item Which did you think made it easier for you to perform comparisons between real \& virtual?
+%	\item Which was more rewarding (if you were visiting the site genuinely)?
+%	\item Which gave a better understanding of the changes that have been effected to the building?
+%	\item Did you notice/discover anything in one scenario that you didn't in the other?
+%	\item Etc.
+%\end{itemize}
+
+\subsection{Hypothesis}
+SUS responses are expected to average fairly low due to the cumbersome nature of the platform's implementation. Participants who are able to overcome this cumbersomeness are expected to respond favourably to the platform, with those who cannot overcome it responding in favour of the traditional `separate' approach instead.
+
+
+\subsection{Experimental Task \& Setting}
+For these experiments, the HMD is worn upon the head of the participant \& is connected to the laptop computer, battery pack \& wireless receiver worn in a satchel. The smartphone is held in the left hand \& the Xbox controller is held in the right hand (all of the buttons \& triggers used for these experiments are on the right hand side of the controller, designed to be activated with only the right hand).
+
+A task similar to that employed in the first investigation (see section \ref{investigation1} will be employed, encouraging participants to encounter multiple different scenarios of moving, remaining stationary, etc.
+
+\subsection{Evaluation}
+%*** explain why we need both Quantitative & Qualitative data?
+
+%What transition styles are preferred in what situations?
+%What affects which transition styles are preferred (eg what are the 'situations')?
+
+Evaluating users' preferences toward different methods of transitioning between visual stimuli in different situations pertains to studying their reactions \& responses to ascertain the effect upon their focus of attention, concepts which are largely psychological in nature \& highly subjective~\cite{Ijsselsteijn2001}. Thus, subjective measures will produce the bulk of the data for evaluation. However, objective data will also be collected \& cross referenced with the subjective data in attempts to support or contradict any relationships that are identified.
+
+It is hypothesized that a manner of transitioning between visual stimuli which results in a less severe BIP will be preferable to a manner of transitioning which results in a worse BIP. As focus in the Waterworth model is most closely related to presence in the VR literature~\cite{Waterworth2001}, one of the subjective measures that will be used in this evaluation will be an established presence measure, to try to capture the behaviour of the user's position upon the focus axis.
+
+\subsubsection{Subjective Quantitative - Post-Task Questionnaire}
+After completing the task, participants will respond to the Igroup Presence Questionnaire (IPQ)~\cite{Schubert2001} (see appendix \ref{ipqitems} for the items of the IPQ) which will provide subjective quantitative insight into their experiences with the system, in particular in relation to their position upon the focus axis of the combined model. The IPQ represents a useful questionnaire for evaluation of users' subjective experiences of using the Mirrorshades platform because its terms, especially in the `spatial involvement' scale, question about the RW environment in a manner that does not explicitly present it as a `distraction' from the VR interaction as many other presence questionnaires do.
+%examples of other presence questionnaires that present RW stimuli as 'distractions'?
+
+%citation for the components being independent
+%The IPQ consists of one general item (G), five items in the `spatial presence' (SP) scale, four items in the `involvement' scale (INV) \& four items in the `realness' scale (REAL). For the purposes of this study, all of the REAL items save REAL2 will be omitted from the questionnaire. The REAL items are primarily concerned with eliciting how `real' participants considered the virtual environment to be. These questions are useful for traditional VR experiences where the user is encouraged to suspend belief \& believe the VR environment they are perceiving to be `real' (the same experiences for which RW stimuli are usually considered a `distraction'). The Mirrorshades platform, however, is less concerned with convincing participants that a VR environment is real \& is more concerned with the juxtaposition of VR \& RW environments.
+%It is believed that the other REAL questions will get the participants thinking about the wrong things & hamper their responses when talking about XR
+
+%hypothesis
+Whilst a traditional VR experience would hope to elicit high SP1 \& SP4 results combined with low INV1 \& INV3 results, Mirrorshades participants are expected to report high SP1 \& SP4 combined with \textit{high} INV1 \& INV3. The results from participants in this investigation will be compared against those who partook in a `traditional' VR experience wherein RW stimuli were considered a distraction.
+
+% *** But what about the factor analysis, what effect does removing the REAL component have on that?
+
+\subsubsection{Subjective Qualitative - Interview}
+A structured interview will be performed after the IPQ has been completed.
+
+\subsubsection{Objective Quantitative - Automatic Data Logging}
+The Unity app logs the following quantitative data each frame to a tab separated variable (\texttt{.tsv}) file;
+
+\begin{itemize}
+	\item \texttt{<frame number>}
+	\item \texttt{<timestamp>} - according to the laptop's internal clock
+	\item \texttt{<original\_position>} - the position as a Unity \texttt{Vector3} where the user begins the experiment
+	\item \texttt{<position>} - the position as a Unity \texttt{Vector3} where the user is on this frame
+	\item \texttt{<delta\_x>} \& \texttt{<delta\_z>} - the difference in the \texttt{x} \& \texttt{z} axes between \texttt{<original\_position>} \& \texttt{<position>} on this frame
+	\item \texttt{<left\_rotation>} \& \texttt{<right\_rotation>} - the orientations as Unity \texttt{Quaternion} of the two Unity camera game objects
+	\item \texttt{<base\_oapcity>} - the maximum opacity of the game objects upon which the webcam feeds are rendered (see section \ref{subsub-baseopacity})
+	\item \texttt{<left\_opacity>} \& \texttt{<right\_opacity>} - the opacity on this frame of the game objects upon which the webcam feeds are rendered
+	\item \texttt{<auto\_tick>} - whether a periodic switch is in progress (see section \ref{subsub-periodic})
+	\item \texttt{<auto\_duration>} \& \texttt{<auto\_spacing>} - the interval \& duration values of the periodic hard switching
+	\item \texttt{<framerate>} - an estimate of the current frame rate (frames per second)
+	\item \texttt{<A\_button>}, \texttt{<B\_button>} \& \texttt{<right\_trigger>} - the current values of these inputs on the controller
+\end{itemize}
+
+\vspace{4mm}
+
+An example line of this output;
+
+\begin{center}
+	\texttt{420	08-05-2014 12-34-36-257	(3.4, 1.0, -8.3)	(0.3, 1.0, -8.3)	3.153522	0.0001955032	(-0.1, -0.7, -0.1, 0.7)	(-0.1, -0.7, -0.1, 0.7)	1	1	1	False	0	0	39.57977	False	False	0}
+\end{center}
+
+These data are expected to reveal relationships between various different metrics \& the choice of transition methods. For example, it is expected that participants will perform short transitions to VR or transitions to a mix of RW \& VR when moving \& perform longer transitions to VR when stationary. This kind of relationship will support or contradict the subjective data collected through questionnaire \& interview.
+
+%*** SUS?
+
+\subsubsection{Objective Qualitative - Video Recording}
+%*** talk about not prompting them with 'think aloud' vs prompting (where prompting changes their responses)
+During experiments, the video feed being displayed by the HMD will be recorded \& the user will be recorded using a video camera (both video \& audio). The video of the HMD graphics will be used in comparison with the quantitative data, while the video \& audio recording of the user will provide objective insight into their behaviour.
+
+%\subsection{Evaluation Techniques}
+%These data will make it possible both to statistically assess preferred switching/fading methods, but also to infer any relationships between different switching/fading methods \& other behaviours: for example, a certain style of switching/fading may frequently appear after a period of movement, but rarely when the participant is stationary.
+
+%\section{Hypothesis}
+%Null hypothesis includes things like;
+%\begin{itemize}
+%	\item different transitions do not alter user `enjoyment'
+%	\item users will not prefer one transition over another
+%	\item choice of transition will have no effect on circumstances/scenarios
+%	\item users will not move head less when walking
+%	\item users will not spend less time in virtual when walking
+%	\item etc.
+%\end{itemize}
+
 %=========================================================================================================
+
+\begin{figure}[h]
+	\begin{center}
+		\includegraphics[width=\linewidth]{participant-f.png}
+		\caption{participant-f.png}
+		\label{participant-f.png}
+	\end{center}
+\end{figure}
+
+\begin{figure}[h]
+	\begin{center}
+		\includegraphics[width=\linewidth]{participant-m.png}
+		\caption{participant-m.png}
+		\label{participant-m.png}
+	\end{center}
+\end{figure}
 
 Studies are split into three parts; Phase 1, Phase 2.1 \& Phase 2.2.
 
@@ -43,9 +200,9 @@ In this first investigation phase, only one transition is available to participa
 
 \begin{figure}[h]
 	\begin{center}
-		\includegraphics[width=\linewidth]{images/chapel_path.png}
+		\includegraphics[width=\linewidth]{chapel-path.png}
 		\caption{The path \& positions within the chapel that participants are instructed to attend to.}
-		\label{chapel_path}
+		\label{chapel-path}
 	\end{center}
 \end{figure}
 
@@ -118,7 +275,7 @@ For n=5 ages ranged from 21-26, 3x female \& 2x male, all reported previous expe
 
 \begin{figure}[h]
 	\begin{center}
-		\includegraphics[width=0.7\linewidth]{images/1/sus.png}
+		\includegraphics[width=0.7\linewidth]{1/sus.png}
 		\caption{SUS results.}
 		\label{sus}
 	\end{center}
@@ -132,7 +289,7 @@ As expected, the SUS scores for the mobile scenario are lower than those of the 
 
 \begin{figure}[h]
 	\begin{center}
-		\includegraphics[width=0.9\linewidth]{images/1/post_task_questionnaire_boxplot.png}
+		\includegraphics[width=0.9\linewidth]{1/post_task_questionnaire_boxplot.png}
 		\caption{12-item questionnaire results.}
 		\label{12-item_boxplot}
 	\end{center}
@@ -155,7 +312,7 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \subsection{Participant 1}
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/1/1_4up.png}}
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{1/1_4up.png}}
 	\caption{Some images, yah.}
 \end{figure}
 
@@ -164,7 +321,7 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \clearpage
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/1/1_2up.png}}
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{1/1_2up.png}}
 	\caption{Some images, yah.}
 \end{figure}
 
@@ -177,7 +334,7 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \subsection{Participant 3}
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/1/3_4up.png}}
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{1/3_4up.png}}
 	\caption{Some images, yah.}
 \end{figure}
 
@@ -186,7 +343,7 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \clearpage
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/1/3_2up.png}}
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{1/3_2up.png}}
 	\caption{Some images, yah.}
 \end{figure}
 
@@ -199,7 +356,7 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \subsection{Participant 4}
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/1/4_4up.png}}
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{1/4_4up.png}}
 	\caption{Some images, yah.}
 \end{figure}
 
@@ -208,7 +365,7 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \clearpage
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/1/4_2up.png}}
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{1/4_2up.png}}
 	\caption{Some images, yah.}
 \end{figure}
 
@@ -221,7 +378,7 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \clearpage
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/1/5_4up.png}}
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{1/5_4up.png}}
 	\caption{Some images, yah.}
 \end{figure}
 
@@ -230,7 +387,7 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \clearpage
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/1/5_2up.png}}
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{1/5_2up.png}}
 	\caption{Some images, yah.}
 \end{figure}
 
@@ -243,7 +400,7 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \clearpage
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/1/6_4up.png}}
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{1/6_4up.png}}
 	\caption{Some images, yah.}
 \end{figure}
 
@@ -252,7 +409,7 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \clearpage
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/1/6_2up.png}}
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{1/6_2up.png}}
 	\caption{Some images, yah.}
 \end{figure}
 
@@ -277,7 +434,7 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \subsection{Participant 7}
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/2.1/7_1-4_3up.png}}
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{2.1/7_1-4_3up.png}}
 	\caption{Some images, yah.}
 \end{figure}
 
@@ -290,7 +447,7 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \subsection{Participant 8}
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/2.1/8_1-3_3up.png}}
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{2.1/8_1-3_3up.png}}
 	\caption{Some images, yah.}
 \end{figure}
 
@@ -299,7 +456,7 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \clearpage
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/2.1/8_1-4_3up.png}}
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{2.1/8_1-4_3up.png}}
 	\caption{Some images, yah.}
 \end{figure}
 
@@ -312,7 +469,7 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \subsection{Participant 9}
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/2.1/9_1-3_3up.png}}
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{2.1/9_1-3_3up.png}}
 	\caption{Some images, yah.}
 \end{figure}
 
@@ -321,7 +478,7 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \clearpage
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/2.1/9_1-4_3up.png}}
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{2.1/9_1-4_3up.png}}
 	\caption{Some images, yah.}
 \end{figure}
 
@@ -334,7 +491,7 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \subsection{Participant 10}
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/2.1/10_1-3_3up.png}}
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{2.1/10_1-3_3up.png}}
 	\caption{Some images, yah.}
 \end{figure}
 
@@ -343,7 +500,7 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \clearpage
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/2.1/10_1-4_3up.png}}
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{2.1/10_1-4_3up.png}}
 	\caption{Some images, yah.}
 \end{figure}
 
@@ -356,7 +513,7 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \subsection{Participant 11}
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/2.1/11_1-3_3up.png}}
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{2.1/11_1-3_3up.png}}
 	\caption{Some images, yah.}
 \end{figure}
 
@@ -365,7 +522,7 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \clearpage
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/2.1/11_1-4_3up.png}}
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{2.1/11_1-4_3up.png}}
 	\caption{Some images, yah.}
 \end{figure}
 
@@ -378,7 +535,7 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \subsection{Participant 12}
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/2.1/12_1-3_3up.png}}
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{2.1/12_1-3_3up.png}}
 	\caption{Some images, yah.}
 \end{figure}
 
@@ -387,7 +544,7 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \clearpage
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/2.1/12_1-4_3up.png}}
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{2.1/12_1-4_3up.png}}
 	\caption{Some images, yah.}
 \end{figure}
 
@@ -400,7 +557,7 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \subsection{Participant 13}
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/2.1/13_1-3_3up.png}}
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{2.1/13_1-3_3up.png}}
 	\caption{Some images, yah.}
 \end{figure}
 
@@ -409,7 +566,7 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \clearpage
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/2.1/13_1-4_3up.png}}
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{2.1/13_1-4_3up.png}}
 	\caption{Some images, yah.}
 \end{figure}
 
@@ -434,7 +591,7 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \subsection{Participant 14}
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/2.2/14_75_2up.png}}
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{2.2/14_75_2up.png}}
 	\caption{Some images, yah.}
 \end{figure}
 
@@ -443,7 +600,7 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \clearpage
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/2.2/14_50_2up.png}}
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{2.2/14_50_2up.png}}
 	\caption{Some images, yah.}
 \end{figure}
 
@@ -456,7 +613,7 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \subsection{Participant 15}
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/2.2/15_75_2up.png}}
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{2.2/15_75_2up.png}}
 	\caption{Some images, yah.}
 \end{figure}
 
@@ -465,7 +622,7 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \clearpage
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/2.2/15_50_2up.png}}
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{2.2/15_50_2up.png}}
 	\caption{Some images, yah.}
 \end{figure}
 
@@ -478,7 +635,7 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \subsection{Participant 16}
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/2.2/16_75_2up.png}}
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{2.2/16_75_2up.png}}
 	\caption{Some images, yah.}
 \end{figure}
 
@@ -487,7 +644,7 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \clearpage
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/2.2/16_50_2up.png}}
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{2.2/16_50_2up.png}}
 	\caption{Some images, yah.}
 \end{figure}
 
@@ -500,7 +657,7 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \subsection{Participant 17}
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/2.2/17_75_2up.png}}
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{2.2/17_75_2up.png}}
 	\caption{Some images, yah.}
 \end{figure}
 
@@ -509,7 +666,7 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \clearpage
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/2.2/17_50_2up.png}}
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{2.2/17_50_2up.png}}
 	\caption{Some images, yah.}
 \end{figure}
 
